@@ -1,8 +1,10 @@
-CHANGES.txt - 06/17/2005
+CHANGES.txt - 06/20/2005
 ------------------------
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The CUPS API and scheduler no longer support SSLv2-
+	  encrypted connections.
 	- Updated the cupsaddsmb utility to correctly export the
 	  CUPS driver for Windows.
 	- Fixed a signal-handling bug in httpRead() which
